# libkleo

./: .clang-tidy  .codespellrc  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5LibkleoConfig.cmake.in  KPimLibkleoConfig.cmake.in  REUSE.toml  config-libkleo.h.cmake  config-libkleo.h.in  cppcheck-suppressions.xml  libkleo.categories  libkleo.renamecategories  metainfo.yaml
.reuse/: dep5
autotests/: CMakeLists.txt  abstractkeylistmodeltest.cpp  abstractkeylistmodeltest.h  assuantest.cpp  classifytest.cpp  compliancetest.cpp  editdirectoryservicedialogtest.cpp  expirycheckertest.cpp  expirycheckertest.qrc  flatkeylistmodeltest.cpp  formattingtest.cpp  formattingtest.qrc  hextest.cpp  hierarchicalkeylistmodeltest.cpp  keycachetest.cpp  keyparameterstest.cpp  keyresolvercoretest.cpp  keyresolvercoretest.qrc  keyresolvertest.cpp  keyresolvertest.qrc  keyselectioncombotest.cpp  keyserverconfigtest.cpp  newkeyapprovaldialogtest.cpp  stringutilstest.cpp  testhelpers.h
autotests/fixtures/expirycheckertest/: pubring.kbx  trustdb.gpg  trustlist.txt
autotests/fixtures/formattingtest/: pubring.kbx  trustdb.gpg
autotests/fixtures/keyresolvercoretest/: .gitignore  openssl.cnf  pubring.kbx  readme.md  test-ca.cert.pem  test-ca.cert.srl  test-ca.key.pem  trustdb.gpg  trustlist.txt
autotests/fixtures/keyresolvercoretest/demoCA/: index.txt
autotests/fixtures/keyresolvertest/: readme.md
autotests/testdata/formattingtest/: openpgp-signature-all-good.txt.sig  openpgp-signature-key-expired.txt.sig  openpgp-signature-key-not-certified.txt.sig  openpgp-signature-key-revoked.txt  openpgp-signature-key-revoked.txt.sig  openpgp-signature-key-unknown.txt.sig  openpgp-signature-signature-bad.txt  openpgp-signature-signature-bad.txt.sig  openpgp-signature-signature-expired.txt.sig
src/: CMakeLists.txt  Messages.sh  libkleopatrarc-win32.desktop  libkleopatrarc.desktop  rc.cpp
src/backends/chiasmus/: chiasmusbackend.cpp
src/backends/qgpgme/: qgpgmebackend.cpp  qgpgmeencryptjob.cpp  qgpgmeencryptjob.h  qgpgmekeyformailboxjob.cpp  qgpgmekeyformailboxjob.h  qgpgmesignencryptjob.cpp  qgpgmesignencryptjob.h
src/kcfg/: classifyconfig.kcfg  classifyconfig.kcfgc  expirycheckerconfigbase.kcfg  expirycheckerconfigbase.kcfgc  openpgpcertificatecreationconfig.kcfg  openpgpcertificatecreationconfig.kcfgc
src/kleo/: abstractimportjob.h  auditlogentry.cpp  auditlogentry.h  checksumdefinition.cpp  checksumdefinition.h  cryptobackend.h  cryptobackendfactory.cpp  cryptoconfig.h  debug.cpp  debug.h  defaultkeyfilter.cpp  defaultkeyfilter.h  defaultkeygenerationjob.cpp  defaultkeygenerationjob.h  deletejob.h  dn.cpp  dn.h  dnattributes.cpp  dnattributes.h  docaction.cpp  docaction.h  encryptjob.h  enum.cpp  enum.h  exception.cpp  exception.h  expirychecker.cpp  expirychecker.h  expirychecker_p.h  expirycheckerconfig.cpp  expirycheckerconfig.h  expirycheckersettings.cpp  expirycheckersettings.h  exportjob.h  importfromkeyserverjob.h  importjob.h  job.cpp  kconfigbasedkeyfilter.cpp  kconfigbasedkeyfilter.h  keyfilter.h  (+32 more)
src/models/: keycache.cpp  keycache.h  keycache_p.h  keylist.h  keylistmodel.cpp  keylistmodel.h  keylistmodelinterface.cpp  keylistmodelinterface.h  keylistsortfilterproxymodel.cpp  keylistsortfilterproxymodel.h  keyrearrangecolumnsproxymodel.cpp  keyrearrangecolumnsproxymodel.h  modeltest.cpp  modeltest.h  subkeylistmodel.cpp  subkeylistmodel.h  useridlistmodel.cpp  useridlistmodel.h  useridlistproxymodel.cpp  useridlistproxymodel.h  useridproxymodel.cpp  useridproxymodel.h
src/pics/: CMakeLists.txt  libkleopatra.qrc
src/smartcard/: card.cpp  card.h  cardmanager.cpp  cardmanager.h  gencardkeydialog.cpp  gencardkeydialog.h  gpgcardwidget.cpp  gpgcardwidget.h  netkeycard.cpp  netkeycard.h  netkeywidget.cpp  netkeywidget.h  nullpinwidget.cpp  nullpinwidget.h  openpgpcard.cpp  openpgpcard.h  pgpcardwidget.cpp  pgpcardwidget.h  smartcardwidget.cpp  smartcardwidget.h
src/tests/: CMakeLists.txt  gnupgviewer.h  test_auditlog.cpp  test_cryptoconfig.cpp  test_jobs.cpp  test_kdhorizontalline.cpp  test_keyformailbox.cpp  test_keygen.cpp  test_keygen.h  test_keylister.cpp  test_keylister.h  test_keyresolver.cpp  test_keyselectioncombo.cpp  test_keyselectiondialog.cpp
src/ui/: adjustingscrollarea.cpp  adjustingscrollarea.h  animatedexpander.cpp  animatedexpander.h  animatedexpander_p.h  auditlogviewer.cpp  auditlogviewer.h  cryptoconfigdialog.cpp  cryptoconfigdialog.h  cryptoconfigentryreaderport.cpp  cryptoconfigentryreaderport_p.h  cryptoconfigmodule.cpp  cryptoconfigmodule.h  cryptoconfigmodule_p.h  directoryserviceswidget.cpp  directoryserviceswidget.h  directoryserviceswidget.ui  dnattributeorderconfigwidget.cpp  dnattributeorderconfigwidget.h  editdirectoryservicedialog.cpp  editdirectoryservicedialog.h  errorlabel.cpp  errorlabel.h  filenamerequester.cpp  filenamerequester.h  formtextinput.cpp  formtextinput.h  formtextinput_p.h  headerview.cpp  headerview.h  kdhorizontalline.cpp  kdhorizontalline.h  keyapprovaldialog.cpp  keyapprovaldialog.h  keylistview.cpp  keylistview.h  keyrequester.cpp  keyrequester.h  keyselectioncombo.cpp  keyselectioncombo.h  (+30 more)
src/utils/: algorithm.h  applicationpalettewatcher.cpp  applicationpalettewatcher.h  assuan.cpp  assuan.h  chrono.h  classify.cpp  classify.h  compat.cpp  compat.h  compliance.cpp  compliance.h  cryptoconfig.cpp  cryptoconfig.h  cryptoconfig_p.h  expiration.cpp  expiration.h  filesystemwatcher.cpp  filesystemwatcher.h  formatting.cpp  formatting.h  gnupg-registry.c  gnupg-registry.h  gnupg.cpp  gnupg.h  hex.cpp  hex.h  keyhelpers.cpp  keyhelpers.h  keyparameters.cpp  keyparameters.h  keyusage.h  multivalidator.cpp  multivalidator_p.h  qtstlhelpers.cpp  qtstlhelpers.h  scdaemon.cpp  scdaemon.h  stringutils.cpp  stringutils.h  (+9 more)
tests/: CMakeLists.txt  gnupgviewer.h  test_auditlog.cpp  test_cryptoconfig.cpp  test_jobs.cpp  test_keyformailbox.cpp  test_keygen.cpp  test_keygen.h  test_keylister.cpp  test_keylister.h  test_keyresolver.cpp  test_keyselectioncombo.cpp  test_keyselectiondialog.cpp
(+185 files in other folders)
